made some changes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="result-val">
-                <p>You are <span data-value></span></p>
+                <p><span>You are</span><span data-value></span></p>
             </div>
         </div>
     </div>
